added-licence & copyright in-markdown

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ENVIRONMENT CONFIGURATION MODE [ USE 0 FOR DEVELOPMENT & 1 FOR PRODUCTION ]
+# ENVIRONMENT CONFIGURATION MODE [ USE "development" FOR DEVELOPMENT & "production" FOR PRODUCTION ]
 NODE_ENV = 
 
 # NEXT.JS CONFIGURATION
