containerized-docker-images

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,47 +1,111 @@
-server {
-    listen 80;
-    server_name rupantor.aknibir.dev;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    # REDIRECTINGt HTTP TO HTTPS
-    return 301 https://$host$request_uri;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name rupantor.aknibir.dev;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    client_max_body_size 100M;
 
-    # SSL CONFIGURATION
-    ssl_certificate /etc/letsencrypt/live/rupantor.aknibir.dev/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/rupantor.aknibir.dev/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
+    # Logging Settings
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
 
-    # REVERSE PROXY CONFIGURATION
-    location / {
-        proxy_pass http://localhost:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-    }
+    # Optimization
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    # ADDITIONAL SECURITY CONFIGURATION
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
+    # Gzip Settings
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # ERROR HANDELING CONFIGURATION
-    error_page 404 /404.html;
-    location = /404.html {
+    # Security Headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
+    server {
+        listen 80;
+        server_name rupantor.aknibir.dev;
         root /usr/share/nginx/html;
-    }
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        index index.html;
+
+        # Next.js API and Dynamic Routes
+        location / {
+            proxy_pass http://app:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_buffering off;
+            proxy_read_timeout 300;
+            proxy_connect_timeout 300;
+
+            # WebSocket Support
+            proxy_set_header Connection "Upgrade";
+        }
+
+        # Static Files
+        location /_next/static/ {
+            proxy_pass http://app:3000;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            expires 365d;
+            access_log off;
+        }
+
+        # Next.js Public Files
+        location /public/ {
+            proxy_pass http://app:3000;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            expires 365d;
+            access_log off;
+        }
+
+        # Error Pages
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            internal;
+        }
+
+        # Additional Security Headers
+        location ~ /\. {
+            deny all;
+        }
+
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+        }
+
+        location = /robots.txt {
+            access_log off;
+            log_not_found off;
+        }
     }
 }
