--- a/.github/workflows/Docker-Image-Build.yml
+++ b/.github/workflows/Docker-Image-Build.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.9.0]
+        node-version: [18.12.0]
 
     steps:
     - uses: actions/checkout@v4  
@@ -55,8 +55,7 @@ jobs:
         NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET: ${{ secrets.NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET }}
         NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY }}
       run: |
-        BUILD_ARGS=$(./scripts/create-env.sh)
-        docker build --no-cache $BUILD_ARGS . --tag ghcr.io/aknibircse/rupantor-ai-saas:latest
+        docker build --no-cache . --tag ghcr.io/aknibircse/rupantor-ai-saas:latest
 
     - name: Push Docker Image To Registry
       run: docker push ghcr.io/aknibircse/rupantor-ai-saas:latest
