refactor: update build scripts and Docker configuration
- Update npm script names for better clarity:
  - dev → start:dev
  - build → build:prod
  - start → start:prod
  - lint → valid:lint

- Docker improvements:
  - Remove unused NODE_ENV build arg
  - Remove redundant .dist copy
  - Update build and start commands to match new script names

- Update README with new npm commands and legacy peer deps
- Fix GitHub Actions workflow username context

These changes improve build process clarity and Docker configuration efficiency.

--- a/.github/workflows/Docker-Image-Build.yml
+++ b/.github/workflows/Docker-Image-Build.yml
@@ -30,20 +30,20 @@ jobs:
 
     - name: Login Into Github Container Registry
       run: |
-        docker login --username aknibircse --password ${{ secrets.DOCKER_TOKEN }} ghcr.io
+        docker login --username ${{ github.actor }} --password ${{ secrets.DOCKER_TOKEN }} ghcr.io
 
     - name: Create & Execute Environment Variables Files
       run: chmod +x ./scripts/create-env.sh && ./scripts/create-env.sh
 
     - name: Build Docker Image
       env:
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+        CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
         NEXT_PUBLIC_CLERK_SIGN_IN_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_IN_URL }}
         NEXT_PUBLIC_CLERK_SIGN_UP_URL: ${{ secrets.NEXT_PUBLIC_CLERK_SIGN_UP_URL }}
         NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL: ${{ secrets.NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL }}
         NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL: ${{ secrets.NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL }}
         MONGODB_URL: ${{ secrets.MONGODB_URL }}
-        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
-        CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
         WEBHOOK_SECRET: ${{ secrets.WEBHOOK_SECRET }}
         NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}
         NEXT_PUBLIC_CLOUDINARY_API_KEY: ${{ secrets.NEXT_PUBLIC_CLOUDINARY_API_KEY }}
